# sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: roadmap.md
src/thinkneo/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py
tests/integration/: test_against_production.py
