[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thinkneo"
version = "1.0.0"
description = "Python SDK for ThinkNEO MCP+A2A Gateway — 59 MCP tools + 24 A2A skills"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ThinkNEO", email = "hello@thinkneo.ai" }]
readme = "README.md"
keywords = ["thinkneo", "mcp", "a2a", "ai-governance", "guardrails", "finops", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.25.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.3", "respx>=0.21"]

[project.urls]
Homepage = "https://thinkneo.ai"
Documentation = "https://github.com/thinkneo-ai/mcp-server"
Repository = "https://github.com/thinkneo-ai/sdk-python"
Issues = "https://github.com/thinkneo-ai/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/thinkneo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: tests that hit the live endpoint"]
